Fixed datatable stylings, rounded corner, dropdown overflow issues

--- a/public/stylesheets/tables/datatable.css
+++ b/public/stylesheets/tables/datatable.css
@@ -272,20 +272,28 @@ table.dataTable thead .sorting_desc_disabled:after {
   background-color: white;
   overflow: hidden;
 }
+
 .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th{
-  border-top: 0px;
+    border-top: 0px;
+    line-height: 2rem;
 }
+
+.table th, .table td{
+    padding: 10px 15px !important;
+}
+
 #tables-datatable{
-  max-width: 100%;
-  overflow-x: scroll;
-  overflow-y: visible;
+    max-width: 100%;
+    overflow-x: scroll;
+    overflow: visible;
+    position: initial;
   /*padding-bottom: 100px;*/
 }
 
 #tables-datatable .table{
   padding-bottom: 90px !important;
   border-radius: 5px;
-  /*overflow-y: visible;*/
+  overflow-y: visible;
 }
 
 /* condensed */
@@ -296,14 +304,27 @@ table.dataTable thead .sorting_desc_disabled:after {
 .table.condensed thead td{
   font-weight: bold;
 }
-
+.table>thead>tr>th, .table>tbody>tr>td{
+    font-size: 0.94rem;
+    border: none;
+}
 .table thead {
-  background: #3e3e3e;
-  color: #ffffff;
+    color: #ffffff;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
 }
 
+.table thead th{
+    background: #3e3e3e;
+}
 .table th.sorted {
-  background: #292929;
+    background: #292929;
+}
+.table thead th:first-child{
+    border-top-left-radius: 5px;
+}
+.table thead th:last-child{
+    border-top-right-radius: 5px;
 }
 
 .datatable thead th:hover {
